fix Makefile for GameServer
Signed-off-by: duyanghao <1294057873@qq.com>

--- a/GameServer/Makefile
+++ b/GameServer/Makefile
@@ -1,4 +1,5 @@
-gameserver:game_server.cpp msg.pb.cc 
-	g++ -L/usr/lib64/mysql -lmysqlclient -lprotobuf -lpthread -o gameserver game_server.cpp msg.pb.cc
+gameserver:game_server.cpp
+	protoc --cpp_out=. msg.proto
+	g++ -L/usr/lib64/mysql -L/usr/local/lib -lmysqlclient -lprotobuf -lpthread -o gameserver game_server.cpp msg.pb.cc
 clean:
 	rm gameserver msg.pb*
